--- a/_layouts/edu.html
+++ b/_layouts/edu.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: "ko" }}">
-
+  <link href="http://cdn.jsdelivr.net/gh/joungkyun/font-d2coding/d2coding.css" rel="stylesheet" type="text/css">
+  
   {%- include head.html -%}
 
   <body>
