--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,6 +13,8 @@ layout: default
       {%- if page.author -%}
         • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span class="p-author h-card" itemprop="name">{{ page.author }}</span></span>
       {%- endif -%}</p>
+
+      <link href="http://cdn.jsdelivr.net/gh/joungkyun/font-d2coding/d2coding.css" rel="stylesheet" type="text/css">
   </header>
 
   <div class="post-content e-content" itemprop="articleBody">
