--- a/_sass/minima/_syntax-highlighting.scss
+++ b/_sass/minima/_syntax-highlighting.scss
@@ -1,4 +1,4 @@
-.highlight,pre.highlight{font-family: 'D2 coding', "Consolas", monospace;background:#282c34;color:#282c34}
+.highlight,pre.highlight{font-family: 'D2 coding', "Consolas", monospace;background:#282c34;color:#abb2bf}
 .highlight pre{background:#282c34}
 .highlight .hll{background:#282c34}
 .highlight .c{color:#5c6370;font-style:italic}
