--- a/_sass/minima/_syntax-highlighting.scss
+++ b/_sass/minima/_syntax-highlighting.scss
@@ -1,5 +1,5 @@
 .highlight,pre.highlight{font-family: 'D2 coding', "Consolas", monospace;background:#282c34;color:#abb2bf}
-.highlight pre{background:#282c34}
+.highlight pre{background:#282c34;color:#abb2bf}
 .highlight .hll{background:#282c34}
 .highlight .c{color:#5c6370;font-style:italic}
 .highlight .err{color:#960050;background-color:#1e0010}
