--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -168,6 +168,13 @@ pre {
   }
 }
 
+p > code .language-plaintext.highlighter-rouge {
+  padding: 2px 4px;
+  color: rgb(202, 68, 64);
+  background-color: rgb(249, 242, 244);
+  border-radius: 4px;
+  white-space: nowrap;
+}
 
 
 /**
