--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -168,7 +168,8 @@ pre {
   }
 }
 
-code .language-plaintext {
+code,
+.language-plaintext.highlighter-rouge {
   padding: 2px 4px;
   color: rgb(202, 68, 64);
   background-color: rgb(249, 242, 244);
