--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -169,7 +169,7 @@ pre {
 }
 
 code,
-.language-plaintext.highlighter-rouge {
+.language-plaintext {
   padding: 2px 4px;
   color: rgb(202, 68, 64);
   background-color: rgb(249, 242, 244);
