--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -168,8 +168,7 @@ pre {
   }
 }
 
-code,
-.language-plaintext {
+p > code {
   padding: 2px 4px;
   color: rgb(202, 68, 64);
   background-color: rgb(249, 242, 244);
